--- a/workspace/forum/src/main/resources/application.properties
+++ b/workspace/forum/src/main/resources/application.properties
@@ -21,4 +21,16 @@ forum.jwt.expiration=86400000
 
 #86400000 eh 1 dia em milessegundos
 
+# actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
 
+# @project.name@ puxa as informacoes do pom.xml nas primeiras linhas do arquivo tem informacoes de name version description ...
+
+# spring boot admin
+spring.boot.admin.client.url=http://localhost:8081
